--- a/dotnetconf-2023/DotNetConf-2023/DotNetConf-2023.csproj
+++ b/dotnetconf-2023/DotNetConf-2023/DotNetConf-2023.csproj
@@ -3,9 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>DotNetConf_2023</RootNamespace>
+    <RootNamespace>DotNetConf2023</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
+
+  <ItemGroup>
+    <EditorConfigFiles Remove="D:\Projects\CSharpDemos\dotnetconf-2023\DotNetConf-2023\.editorconfig" />
+  </ItemGroup>
 
 </Project>
